<resources>
    <string name="app_name">Včeličky</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">E-mail</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Neplatná e-mailová adresa</string>
    <string name="error_invalid_password">Heslo je krátke (min 8 znakov)</string>
    <string name="error_invalid_name">Zadajte meno a priezvisko</string>
    <string name="error_invalid_phone">Neplatný formát (použite len čísla)</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">Povinné pole</string>
    <string name="error_not_equal_password">Heslá sa nezhodujú</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="no_notification">Nemáte žiadne notifikácie</string>
    <string name="need_internet">Nefunkčné internetové pripojenie</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Edituj</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_show_all">Zobraz merania</string>

    <!-- General strings -->
    <string name="team">VČELIČKY TEAM</string>
    <string name="team_mail">fiittp20@gmail.com</string>
    <string name="thank">Ďakujeme, že využívate náš produkt</string>
    <string name="team_members">Členovia tímu</string>
    <string name="kovacik">Ing. Tomáš Kováčik, PhD.</string>
    <string name="baska">Bc. Barbora Čelesová</string>
    <string name="tomik">Bc. Tomáš Koreň</string>
    <string name="pully">Bc. Jakub Pullmann</string>
    <string name="miso">Bc. Michal Puškáš</string>
    <string name="matus">Bc. Matúš Sosňak</string>
    <string name="peto">Bc. Peter Štofaňák</string>
    <string name="jozko">Bc. Jozef Vaľko</string>
    <string name="description">
        V spolupráci s firmou SimpleCell sme vytvorili projekt na monitorovanie včelích úľov. Pomocou získaných informácií chceme pomôcť včelárom výrazne znížiť počet rutinných inšpekcií, odhaliť rojenie či choroby včiel. Na tieto účely využívame Arduino mega 2560, ktoré zhromažďuje informácie zo senzorov. Ide napríklad o senzor teploty, vlhkosti, tenzometer či akcelerometer na odhalenie prevalenia úľa alebo prípadného kradnutia. Včelárom využívajúcim našu technológiu poskytneme štatistické informácie z krátkodobého ale aj dlhodobého hľadiska a v prípade náhlej zmeny ich upozorňujeme prostredníctvom emailov, notifikácii v aplikácii alebo SMS.
    </string>
    <string name="register">Nemáte účet? Zaregistrujte sa</string>
    <string name="registration">Registrácia</string>
    <string name="name">Meno a priezvisko</string>
    <string name="email">E-mail</string>
    <string name="phone">Telefónne číslo</string>
    <string name="numOfDevs">Počet zariadení</string>
    <string name="notes">Poznámky</string>
    <string name="team_web">http://team20-17.studenti.fiit.stuba.sk/BeeWebpage/public/#</string>
    <string name="beekeeper">Beekeeper</string>
    <string name="passwd">Zmena hesla</string>
    <string name="no_service">Žiadne pripojenie k intenetu, aktualizácia dát bola neúspešná</string>
    <string name="error_loading_data">Nepodarilo sa načítať dáta zo servera. Kontaktujte svojho administrátora</string>
    <string name="no_hives_available">Aktuálne ešte nemáte žiaden úľ. Prosím objednajte si zariadenie ak chcete využívať naše služby (Ľavý bočný panel - Objednávka)</string>

    <!--Order Activity strings-->
    <string name="hive_name">Názov úľa</string>
    <string name="hive_location">Adresa úľa</string>
    <string name="notifications">Notifikácie chcem dostávať \nprostredníctvom:</string>
    <string name="sms">SMS</string>

    <!--User actions related strings-->
    <string name="proceed_with_logout">Chcete pokračovať v odhlásení?</string>
    <string name="yes">Áno</string>
    <string name="no">Nie</string>
    <string name="ok">OK</string>

    <!--Button texts-->
    <string name="temperature">Teplota</string>
    <string name="humidity">Vlhkosť</string>
    <string name="weight">Hmotnosť</string>
    <string name="battery">Batéria</string>
    <string name="accelerometer">Pozícia</string>

    <!--Chart related strings-->
    <string name="time">Čas:</string>
    <string name="in_temperature">Vnútorná teplota</string>
    <string name="out_temperature">Vonkajšia teplota</string>
    <string name="in_humidity">Vnútorná vlhkosť</string>
    <string name="out_humidity">Vonkajšia vlhkosť</string>
    <string name="celsius">°C</string>
    <string name="percent">%</string>
    <string name="kilogram">kg</string>
    <string name="no_data_available">Žiadne dáta k dispozícii</string>
    <string name="title_activity_maps">Map</string>

    <!--Limit values strings-->
    <string name="notificationsOn">Notifikácie pre úľ boli zapnuté</string>
    <string name="notificationsOff">Notifikácie pre úľ boli vypnuté</string>

</resources>
